Add comments to find rest of height
It is a surprise that an inside element <h1> changes the position of its
parent element.

--- a/ThreeColumn.html
+++ b/ThreeColumn.html
@@ -11,7 +11,7 @@
     <link href="styles/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="bodyContainer" class="container-fluid">
+    <div id="bodyContainer" class="container-fluid22">
         <div id="bodyHeader" class="text-center">
             <h1>Three Column Page Demo</h1>
             <button id="toggleLeftBtn" class="btn btn-primary btn-lg">
