Complete column collapsing and readme

--- a/ThreeColumn.html
+++ b/ThreeColumn.html
@@ -11,13 +11,13 @@
     <link href="styles/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="bodyContainer" class="container-fluid22">
+    <div id="bodyContainer" class="container-fluid">
         <div id="bodyHeader" class="text-center">
             <h1>Three Column Page Demo</h1>
-            <button id="toggleLeftBtn" class="btn btn-primary btn-lg">
+            <button id="leftToggleBtn" class="btn btn-primary btn-lg">
                 Toggle Left Panel
             </button>
-            <button id="toggleRightBtn" class="btn btn-primary btn-lg">
+            <button id="rightToggleBtn" class="btn btn-primary btn-lg">
                 Toggle Right Panel
             </button>
         </div>
